Bugfix - page_size layout broken
* only target sidebar page_size select component when applying full width style

--- a/src/public/css/app.css
+++ b/src/public/css/app.css
@@ -168,7 +168,7 @@
   background: #ffffff;
   font-size: 16px;
 }
-.wg .govuk-select#page_size {
+.wg .govuk-select.full-width {
   min-width: 100%;
   max-width: 100%;
 }
