--- a/src/public/scss/_wg.scss
+++ b/src/public/scss/_wg.scss
@@ -190,7 +190,7 @@
     background: colours.$white;
     font-size: 16px;
 
-    &#page_size {
+    &.full-width {
       min-width: 100%;
       max-width: 100%;
     }
